# calibration

calibration/: package.xml
calibration_estimation/: CMakeLists.txt  package.xml
calibration_estimation/example/: cal_measurements.bag  config.rviz
calibration_estimation/include/: auxiliar.h  chessboard.h  conversion.h  cost_functions.h  data.h  joint_state.h  markers.h  optimization.h  projection.h  robot_state.h  robot_state_publisher.h  triangulation.h  view.h
calibration_estimation/launch/: pr2_example.launch  pr2_example_visualization.launch
calibration_estimation/src/calibration_estimation/: multi_step_cov_estimator.py
calibration_estimation/src/cpp/: auxiliar.cpp  calibration_estimation_node.cpp  chessboard.cpp  conversion.cpp  data.cpp  estimation.cpp  joint_state.cpp  main.cpp  markers.cpp  optimization.cpp  projection.cpp  robot_state.cpp  robot_state_publisher.cpp  triangulation.cpp  view.cpp  visualization.cpp
calibration_estimation/src/example/: config.rviz
calibration_estimation/src/launch/: pr2_example_visualization.launch
