<package>
  <name>calibration_estimation</name>
  <version>0.9.28</version>
  <description>
    Runs an optimization to estimate the a robot's kinematic parameters. This package is a
    generic rewrite of pr2_calibration_estimation.
  </description>
  <author>Vijay Pradeep</author>
  <author>Michael Ferguson</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/calibration_estimation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>calibration_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-tk</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>rosbag</run_depend>

  <!--<depend package="urdf_python" />   for parsing URDF (currently a modified version is held internally) -->
</package>
